<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mazeltov</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_label_refresh">Refresh</string>
    <string name="action_label_search">Search</string>
    <string name="action_label_both">Both</string>
    <string name="action_label_text">Text</string>
    <string name="action_label_logo">Logo</string>
    <string name="action_label_up">Up</string>
    <string name="action_label_nav_tabs">Tabs</string>
    <string name="action_label_nav_drop_down">List</string>
    <string name="action_label_nav_label">Label</string>
    <string name="action_label_nav">Navigation Mode &gt;</string>
    <string name="action_label_bak">Action Bar Background &gt;</string>
    <string name="action_label_bak_none">None</string>
    <string name="action_label_bak_gradient">Gradient</string>
    <string name="action_label_bak_image">Image</string>
    <string name="sticky_item">Sticky</string>
    <string name="what_title">What</string>
    <string name="quick_return_item">Quick Return</string>
    <string name="pick">Gallery</string>
    <string name="load">Web</string>
    <string name="local">App</string>
    <string name="app_id">440271639433022</string>
    <string name="profiles_url">http://lbis.dyndns.org/MyProjects/MichaelTest/profiles_numbers/</string>
    <string name="gender_hint">Please select your geneder</string>
    <string name="s3_bucket">mazeltovdev</string>
    <string name="your_video">Your Video</string>
    <string name="back">Back</string>
    <string name="record">Record</string>
    <string name="cannot_record">Cannot record</string>
    <string name="recording">Recording</string>
    <string name="saved">Saved video</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="playing">Playing</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="cannot_delete">Cannot delete</string>
    <string name="completed_playback">Completed playback</string>
    <string name="event_creation_splash_subtext">Celebrate with us !</string>
    <string name="event_creation_splash_frorttext">Let\'s start</string>
    <string name="event_basic_details_title">Your New Event !</string>
    <string name="user_log_in_title">Log in</string>
    <string name="user_facebook_title">Connect with Facebook</string>
    <string name="user_facebook_loading">Wait a second ...</string>
    <string name="cantOpen">Can\'t open this application</string>
    <string name="settings">Settings</string>
    <string name="mode">Swipe Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="leftAction">Left Action</string>
    <string name="reveal">Reveal</string>
    <string name="dismiss">Dismiss</string>
    <string name="choice">Choice</string>
    <string name="rightAction">Right Action</string>
    <string name="rightOffset">Right Offset (%1$s dp)</string>
    <string name="leftOffset">Left Offset (%1$s dp)</string>
    <string name="dp">dp</string>
    <string name="animationTime">Animation Time (Default: 0)</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="openOnLongPress">Open On Long Press</string>
    <string name="newTag">New!</string>
    <string name="discard">Discard</string>
    <string name="its_you">Hi it\'s you !</string>
    <string name="event_creation_name_hint">Your Event Name</string>
    <string name="login_user_login_email_hint">Your email address</string>
    <string name="login_user_login_password_hint">Your password</string>
    <string name="event_creation_location_hint">Where is the event taking place ?</string>
    <string name="event_type_hint">What are you celebrating ?</string>
    <string name="event_creation_description_hint">"What's the agenda ?</string>
    <string name="event_creation_start_date_hint">Pick a time</string>
    <string name="event_creation_start_hour_hint">Pick hour</string>
    <string name="reset_button_text">Reset</string>
    <string name="commit_button_text">Go !</string>
    <string name="user_sign_up_title">Sign Up</string>
</resources>