<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_edges"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/home_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:textAlignment="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:textAlignment="center" >

                <TextView
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_edges_black"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/event_basic_details_title"
                    android:textColor="@color/white" />
            </LinearLayout>

            <EditText
                android:id="@+id/event_creation_name"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/event_creation_name_hint"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" >

                <requestFocus />
            </EditText>

            <AutoCompleteTextView
                android:id="@+id/event_creation_location"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownHeight="150dp"
                android:gravity="center"
                android:hint="@string/event_creation_location_hint"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <TextView
                android:id="@+id/event_type"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/event_type_hint"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <EditText
                android:id="@+id/event_creation_description"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/event_creation_description_hint"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <TextView
                android:id="@+id/event_creation_start_date"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/event_creation_start_date_hint"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <TextView
                android:id="@+id/event_creation_start_hour"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/event_creation_start_hour_hint"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:textAlignment="center" >

                <Button
                    android:id="@+id/event_creation_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_edges_black"
                    android:padding="5dp"
                    android:text="@string/reset_button_text" />

                <Button
                    android:id="@+id/event_creation_commit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_edges_black"
                    android:padding="5dp"
                    android:text="@string/commit_button_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>