<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_edges"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/home_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:textAlignment="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:textAlignment="center" >

                <TextView
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_edges_black"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/user_log_in_title"
                    android:textColor="@color/white" />
            </LinearLayout>

            <EditText
                android:id="@+id/login_user_email"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/login_user_login_email_hint"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/login_user_password"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="@string/login_user_login_password_hint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:textAlignment="center" >

                <Button
                    android:id="@+id/login_user_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_edges_black"
                    android:padding="5dp"
                    android:text="@string/reset_button_text" />

                <Button
                    android:id="@+id/login_user_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_edges_black"
                    android:padding="5dp"
                    android:text="@string/commit_button_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>